--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+.stepperBox {
+  margin: 36px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.stepIcon {
+  margin: auto 12px;
+  height: 24px;
+  width: 24px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.guideline {
+  background-color: #efefef;
+  width: 4px;
+  position: absolute;
+  top: 36px;
+  left: 84px;
 }
